# new_exercise

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
configs/: database.bge-base.example.json  database.example.json  default.json  medical_graph.json  week10_faiss.example.json  week10_vector.json  week12_app.json
data/: medical_docs.jsonl
docs/: architecture-figure.md
docs/database/: mysql_milvus_tag_schema.md
docs/weeks/: week10_embedding_vector_db.md  week11_hybrid_recall.md  week12_rag_web_streaming.md
scripts/: load_bge_base_milvus.py  run_demo.ps1
sql/: 001_mysql_dialogue_schema.sql
src/medical_retrieval/: __init__.py
src/medical_retrieval/api/: __init__.py  server.py
src/medical_retrieval/app/: build_vector_index.py  cli.py  evaluate.py  hybrid_search.py  init_milvus.py  load_milvus.py  search_vector.py
src/medical_retrieval/core/: __init__.py  schema.py
src/medical_retrieval/data/: __init__.py  convert_dialogue_dataset.py  convert_medical_graph.py  io.py  mysql_loader.py  tags.py
src/medical_retrieval/embeddings/: __init__.py  base.py  factory.py  hash_embedding.py  sentence_transformer_embedding.py
src/medical_retrieval/generation/: __init__.py  answer.py  prompt.py
tests/: test_dialogue_dataset_converter.py  test_medical_graph_converter.py  test_mysql_loader.py  test_pipeline.py  test_week10_knowledge_points.py  test_week10_vector_store.py  test_week11_albert_model.py  test_week11_hybrid_recall.py  test_week11_knowledge_points.py  test_week11_milvus_usage.py  test_week12_generation.py  test_week12_knowledge_points.py
(+18 files in other folders)
